# lexparse

./: .env.example  .gitignore  Cargo.toml  README.md  builder_config.toml  download_dict.sh  download_models.sh  parse.ts
dic/: corrections.jsonl  custom.jsonl  lexicon.jsonl  phrasal-verbs.json
src/: decode.rs  idiom.rs  lib.rs  main.rs  matcher.rs  mwe.rs  normalize.rs  phrasal.rs
