[package]
name = "parser-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
tokenizers = { version = "0.19", features = ["hf-hub", "http"] }
ndarray = "0.17"
anyhow = "1.0"
futures = "0.3"
regex = "1"
tower-http = { version = "0.6", features = ["cors"] }
