[package]
name = "parser-service"
version = "0.1.0"
edition = "2024"
default-run = "parser-service"

[lib]
name = "lexparse"
path = "src/lib.rs"

[[bin]]
name = "parser-service"
path = "src/main.rs"

[[bin]]
name = "builder"
path = "src/bin/builder.rs"

[[bin]]
name = "correct_idioms"
path = "src/bin/correct_idioms.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
tokenizers = { version = "0.19", features = ["hf-hub", "http"] }
ndarray = "0.17"
anyhow = "1.0"
futures = "0.3"
regex = "1"
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
toml = "1.1.2"
ureq = { version = "2", features = ["json"] }
